# dom_sanitizer

./: CHANGELOG.md  Cargo.toml  Examples.md  README.md  deny.toml
.github/workflows/: coverage.yml  rust.yml
benches/: policy.rs
crates/bench/: Cargo.toml  test-pages
crates/bench/benches/: policy.rs
examples/: dhat_restrictive.rs  permissive_basic.rs  permissive_plugin.rs  permissive_regex.rs  policy_presets.rs  restrictive_basic.rs  restrictive_plugin.rs  shared_plugin_policy.rs  shared_plugin_policy_channels.rs  shared_policy.rs  shared_pugin_policy.rs
src/: attr_parser.rs  builder.rs  complex.rs  directives.rs  dom_helpers.rs  ext.rs  lib.rs  macros.rs  plugin_policy.rs  policy.rs  preset.rs  re_exports.rs  traits.rs
src/plugin_policy/: builder.rs  core.rs  preset.rs
src/policy/: builder.rs  core.rs  ext.rs  preset.rs
test-pages/: list.html  table.html
tests/: data.rs  plugin_policy.rs  policy.rs  preset.rs
