[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/niklak/dom_sanitizer"
authors = ["niklak <morgenpurple@gmail.com>"]


[package]
name = "dom_sanitizer"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
exclude = [".*", "test-pages", "examples", "deny.toml"]
keywords = ["html", "dom", "sanitization"]
description = "Flexible HTML sanitization for Rust — build policies and sanitize documents easily."


[dependencies]
dom_query = {version = "0.22.0"}
html5ever = {version = "0.35.0"}
tendril = {version = "0.4.3"}

[dev-dependencies]
regex = {version = "1.11.3"}

[features]
default = []
atomic = ["dom_query/atomic"]


[[example]]
name = "shared_plugin_policy"
required-features = ["atomic"]

[workspace]
members = [
    "crates/bench"
]
