[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/niklak/dom_sanitizer"
authors = ["niklak <morgenpurple@gmail.com>"]


[package]
name = "dom_sanitizer"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
exclude = [".*", "test-pages", "examples", "deny.toml"]
keywords = ["html", "dom", "sanitization"]
description = "Flexible HTML sanitization for Rust — build policies and sanitize documents easily."

[workspace.dependencies]
dom_query = {version = "0.24.0"}
html5ever = {version = "0.36.1"}
tendril = {version = "0.4.3"}


[dependencies]
dom_query = {workspace = true}
html5ever = {workspace = true}
tendril = {workspace = true}

[dev-dependencies]
regex = {version = "1.12.2"}

[features]
default = []
atomic = ["dom_query/atomic"]


[[example]]
name = "shared_plugin_policy"
required-features = ["atomic"]

[workspace]
members = [
    "crates/bench"
]
